[build-system]
requires = ["setuptools>=42", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "pyufunc"
version = "0.4.1"
description = "pyufunc consolidates frequently used utility functions into one cohesive package"
authors = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
    {name = "Xuesong Simon Zhou", email = "xzhou74@asu.com"},
]
maintainers = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Intended Audience :: Developers',
    "Operating System :: OS Independent",
    'Topic :: Software Development :: Libraries'
]

readme = 'README.md'
# license = {file = 'LICENSE'}
# license = {text = "Apache License"}

requires-python = ">=3.10"
keywords = ["pyufunc", "utility functions", "utility-library", "python-utilities", "python-utils", "utility", "functions", "common functions", "common utility functions"]

dynamic = ["dependencies"]

[project.license]
file="LICENSE"

[project.urls]
"Homepage" = 'https://github.com/xyluo25/pyufunc'
'Bug Tracker' = 'https://github.com/xyluo25/pyufunc/issues'
'License' = 'https://github.com/xyluo25/pyufunc/blob/main/LICENSE'
'Contact' = 'https://github.com/xyluo25'

# Documentation = 'https://github.com/xyluo25/grid2demand'
# Bug_Tracker = 'https://github.com/xyluo25/grid2demand/issues'
# Repository = "https://github.com/xyluo25/grid2demand"
# Download = "https://www.pepy.tech/projects/pyufunc"

#         # 'Publication': '',
#         # 'Citation': '',
#         # 'Acknowledgement': '',
#         # 'FAQs': '',

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {file = ["requirements_dev.txt"]}

[tool.setuptools]
include-package-data = true
py-modules = []
package-data = {'pyufunc' = ['**/*.txt', '*.xls', '*.xlsx', '*.csv', '*.json', '**/*.json'], "test_data" = ['*.xls', '*.json']}
license-files = []

# [tool.setuptools.packages.find]
# where = ["pyufunc"]

# [tool.setuptools.package-data]
# pyufunc = ['*.txt', '*.xls', '*.xlsx', '*.csv']

# [project.urls]
# GitHub = "https://github.com/ORNL/flowcept"

# [project.optional-dependencies]
# analytics = ["seaborn", "plotly", "scipy"]
# mongo = ["pymongo"]
# dask = ["tomli", "dask[distributed]<=2024.10.0"]
# docs = ["sphinx", "furo"]
# kafka = ["confluent-kafka<=2.8.0"]  # As of today, 2/28/2025, version 2.8.1 is stale. When this gets fixed, let's remove the version constraint. https://pypi.org/project/confluent-kafka/#history
# mlflow = ["mlflow-skinny", "SQLAlchemy", "alembic", "watchdog"]
# nvidia = ["nvidia-ml-py"]
# tensorboard = ["tensorboard", "tensorflow", "tbparse"]
# dev = [
#     "flowcept[docs]",
#     "jupyterlab",
#     "nbmake",
#     "pika",
#     "pytest",
#     "ruff",
#     "pyyaml",
# ]
# Torch and some other ml-specific libs, only used for dev purposes, require the following specific versions.
# ml_dev = [
#     "torch==2.2.2",
#     "torchvision==0.17.2",
#     "torchtext==0.17.2",
#     "datasets==2.17.0",
#     "numpy<2.0",
#     "sacremoses",
#     "nltk"
# ]
# all = [
#     "flowcept[mongo]",
#     "flowcept[analytics]",
#     "flowcept[dask]",
#     "flowcept[kafka]",
#     "flowcept[mlflow]",
#     "flowcept[tensorboard]",
#    "flowcept[dev]",
# ]

# [tool.hatch.version]
# path = "version.py"

# [tool.ruff]
# line-length = 120

# [tool.ruff.lint]
# extend-select = ["E501", "D"]
# ignore = ["D200", "D212", "D105", "D401", "D205", "D100"]

# [tool.ruff.lint.pydocstyle]
# convention = "numpy"

# [tool.hatch.build.targets.wheel]
# packages = ["pyufunc"]

# [tool.hatch.build.targets.wheel.force-include]
#  "resources/sample_settings.yaml" = "resources/sample_settings.yaml"
